--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html" target="_blank" tile="">WEB</a></h1>
+  <h1><a href="index.html" target="_blank" tile="">WEBにほんご</a></h1>
 <ol>
   <li><a href="1.html" target="_blank" tile="">HTML</a></li>
   <li><a href="2.html" target="_blank" tile="">CSS</a></li>
